<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text="@string/calculo_fibonachi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:autoSizeTextType="none" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginVertical="5dp"
        android:text="@string/calcular_el_numero_de_la_serie_fibonachi_que_desees" />

    <EditText
        android:id="@+id/numberInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/introduce_o_numero"
        android:inputType="number"
        android:textAlignment="center"
        app:autoSizeTextType="none" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:onClick="pulsarBoton"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/tituloResultado"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text="@string/resultado"
        android:textAlignment="center"
        app:autoSizeTextType="none" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:autoSizeTextType="none"
        tools:text="Ninguno" />

</LinearLayout>